# Engineer2024_ROS2_Controller

./: .gitignore  LICENSE  README.md  autorun.sh  autorun_engineer.service  env_setup
customctrl_serial_communication/: CMakeLists.txt  package.xml
customctrl_serial_communication/include/: CRC.h
customctrl_serial_communication/src/: CRC.cpp  Serial.cpp  main.cpp
engineer_arm_controller/: CMakeLists.txt  package.xml
engineer_arm_controller/include/: enumClass.hpp  main.hpp
engineer_arm_controller/include/FSM/: FSM.hpp  FSMState.hpp  FSMState_AutoPerlace1.hpp  FSMState_AutoPerlace2.hpp  FSMState_AutoTakeout1.hpp  FSMState_AutoTakeout2.hpp  FSMState_BigSourceLand.hpp  FSMState_CustomControl.hpp  FSMState_Defend.hpp  FSMState_LittleSourceLand.hpp  FSMState_Passive.hpp
engineer_arm_controller/include/Kinematics_Controller/: Kinematics_Controller.hpp
engineer_arm_controller/src/: main.cpp
engineer_arm_controller/src/FSM/: FSM.cpp  FSMState.cpp  FSMState_AutoPerlace1.cpp  FSMState_AutoPerlace2.cpp  FSMState_AutoTakeout1.cpp  FSMState_AutoTakeout2.cpp  FSMState_BigSourceLand.cpp  FSMState_CustomControl.cpp  FSMState_Defend.cpp  FSMState_LittleSourceLand.cpp  FSMState_Passive.cpp
engineer_arm_controller/src/Kinematics_Controller/: Kinematics_Controller.cpp  ikfast_solver.cpp
engineer_arm_controller/urdf/: engineer_arm_urdf.urdf
engineer_arm_controller/urdf/meshes/: link1.STL  link6.STL
engineer_arm_sim/: CMakeLists.txt  package.xml
engineer_arm_sim/include/engineer_arm_sim/: ROS2_controller_thread.hpp  alg_pid.h  sim.hpp
engineer_arm_sim/launch/: sim.launch.py
engineer_arm_sim/mjcf/: engineer_arm.xml
engineer_arm_sim/mjcf/meshes/: base_link.STL  link2.STL
engineer_arm_sim/src/: ROS2_controller_thread.cpp  alg_pid.cpp  drv_math.cpp  sim.cpp
engineer_bag/auto_perlace_1_1/: auto_perlace_1_1_0.db3  metadata.yaml
engineer_bag/auto_perlace_1_2/: auto_perlace_1_2_0.db3  metadata.yaml
engineer_bag/auto_perlace_1_3/: auto_perlace_1_3_0.db3  metadata.yaml
engineer_bag/auto_perlace_2_1/: auto_perlace_2_1_0.db3  metadata.yaml
engineer_bag/auto_perlace_2_2/: auto_perlace_2_2_0.db3  metadata.yaml
engineer_bag/auto_perlace_2_3/: auto_perlace_2_3_0.db3  metadata.yaml
engineer_bag/auto_perlace_2_4/: auto_perlace_2_4_0.db3  metadata.yaml
engineer_bag/auto_takeout_1_1/: auto_takeout_1_1_0.db3  metadata.yaml
engineer_bag/auto_takeout_1_2/: auto_takeout_1_2_0.db3  metadata.yaml
engineer_bag/auto_takeout_2_1/: auto_takeout_2_1_0.db3  metadata.yaml
engineer_bag/auto_takeout_2_2/: auto_takeout_2_2_0.db3  metadata.yaml
engineer_bag/little_resource_1_1/: little_resource_1_1_0.db3  metadata.yaml
engineer_bag/little_resource_1_2/: little_resource_1_2_0.db3  metadata.yaml
engineer_bag/little_resource_1_3/: little_resource_1_3_0.db3  metadata.yaml
engineer_bag/little_resource_2_1/: little_resource_2_1_0.db3  metadata.yaml
engineer_bag/little_resource_2_2/: little_resource_2_2_0.db3  metadata.yaml
engineer_bag/little_resource_2_3/: little_resource_2_3_0.db3  metadata.yaml
engineer_bag/little_resource_3_1/: little_resource_3_1_0.db3  metadata.yaml
engineer_bag/little_resource_3_2/: little_resource_3_2_0.db3  metadata.yaml
engineer_bag/little_resource_3_3/: little_resource_3_3_0.db3  metadata.yaml
engineer_hw/: CMakeLists.txt  package.xml
engineer_hw/include/: Serial.h
engineer_hw/launch/: hw.launch.py
engineer_hw/src/: Serial.cpp  main.cpp
engineer_msg/: CMakeLists.txt  package.xml
engineer_msg/msg/: EndEffector.msg  JointCommand.msg  JointState.msg  LiftState.msg  RobotArmState.msg
engineer_msg/srv/: FSMCommand.srv  FSMState.srv
