<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>engineer_arm_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xuejl2001@mail.ustc.edu.cn">pocket</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <build_depend>kdl_parser</build_depend>
  <exec_depend>kdl_parser</exec_depend>

  <build_depend>ament_index_cpp</build_depend>
  <exec_depend>ament_index_cpp</exec_depend>

  <build_depend>urdf</build_depend>
  <exec_depend>urdf</exec_depend>

  <depend>std_msgs</depend>
  <depend>engineer_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
